--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": "16.18.1",
+    "npm": "8.19.2"
+  }
 }
